# ai-image-generator

./: .env.example  .gitignore  CLAUDE.md  README.md  art-generator.py  config.py  config.yaml.example  example-prompts.json  pyproject.toml  setup.py
generators/: base_generator.py  google_genai.py  google_vertex.py  openai_gpt4o.py
prompts/: prompt_parser.py
